[gd_scene load_steps=4 format=3 uid="uid://dv3uxnkp8ekhg"]

[ext_resource type="Script" path="res://src/ui/context_menu/building_info_panel.gd" id="1_h35vj"]

[sub_resource type="Theme" id="Theme_mxffo"]
default_font_size = 12

[sub_resource type="Theme" id="Theme_16jmh"]
default_font_size = 12

[node name="BuildingInfoPanel" type="Node2D"]
script = ExtResource("1_h35vj")

[node name="Margin" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -72.0
offset_right = 169.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="Margin"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Margin/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TitleLabel" type="Label" parent="Margin/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Building Name"
horizontal_alignment = 1

[node name="DescLabel" type="Label" parent="Margin/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_mxffo")
text = "Produce 5 Food per day"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StatLabel" type="Label" parent="Margin/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_16jmh")
text = "Deconstruct time: 5 days
Workers required: 5 crewmates"
autowrap_mode = 2

[node name="GridContainer" type="GridContainer" parent="Margin/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="WarehouseSpecializeButton" type="Button" parent="Margin/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Specialize"
